# hermes-office

./: .gitignore  .gitleaks.toml  .gitleaksignore  .npmrc  AGENTS.md  ASSETS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.base.json
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
.openai/: hosting.json
app/: globals.css  i18n.ts  layout.tsx  page.tsx
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: capability.rs  constants.rs  diagnostics.rs  health.rs  hex_util.rs  http.rs  lib.rs  main.rs  proof.rs  runtime.rs  secret_transfer.rs  server.rs  startup.rs  web_ui.rs  window.rs
apps/desktop/src-tauri/src/tests/: capability.rs  health.rs  hex_util.rs  http.rs  mod.rs  proof.rs  runtime.rs  secret_transfer.rs  server.rs  startup.rs  web_ui.rs  window.rs
apps/landing/app/: i18n.ts  page.tsx
apps/server/: package.json
apps/server/src/: brand-env.test.ts  brand-env.ts  builtin-memory-files.test.ts  (+95 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  DEPENDENCIES.md  DESIGN.md  HERMES-INTEGRATION.md  HERMES-SETTINGS.md  HOST-APPS.md  RELEASING.md  SECURITY.md  TAILSCALE.md
docs/design/: ui-redesign-spec.md
scripts/: start-office.mjs  start-studio.mjs  start-tailnet.mjs
(+173 files in other folders)
